Fix author line and content spacing.

--- a/src/themes/thereserveforce-2019/assets/css/_elements.scss
+++ b/src/themes/thereserveforce-2019/assets/css/_elements.scss
@@ -4,7 +4,7 @@ pre code{
 	padding: 2px 6px;
 	color: #1C1C1C;
 	font-family: monospace;
-	white-space: pre;
+	white-space: pre-wrap;
 }
 pre code{
 	display: block;
@@ -212,10 +212,6 @@ div.share-buttons{
 			background-color: #1DA1F2;
 		}
 
-		&.hacker-news{
-			background-color: #FF6600;
-		}
-
 		&.reddit{
 			background-color: #FF4500;
 		}
@@ -227,5 +223,10 @@ div.share-buttons{
 		&.linkedin{
 			background-color: #0077B5;
 		}
+
+		&.email{
+			background-color: #FF6600;
+		}
+
 	}
 }
