--- a/src/themes/thereserveforce-2019/assets/css/_section-blog.scss
+++ b/src/themes/thereserveforce-2019/assets/css/_section-blog.scss
@@ -20,10 +20,6 @@ main.list{
 		margin-bottom: 0;
 	}
 
-	.content p:last-of-type{
-		display: inline;
-	}
-
 	footer{
 		text-align: right;
 	}
